# stock-bot

./: .gitignore  README.md  app_navigation.py  main.py  principles.txt  pyproject.toml
core_principles/: graph.py  nodes.py  prompts.py  state.py
pages/: 1_File_Viewer.py  2_Deep_Agent_Chat.py
stock_analysis/: .gitignore  agent.py  cli.py  config.py  subagents.py  tools.py  utils.py
stock_analysis/prompts/: asset_notes.txt  board.txt  cashflow.txt  cashpile.txt  divisions.txt  family.txt  filings_ownership_legal.txt  fundamentals.txt  historical_trading.txt  management.txt  prices.txt  risk.txt  supervisor.txt  system.txt  valuation.txt  websearch.txt  writer.txt
stock_analysis/templates/: report_template.md
utils/: .openai_upload_manifest.json  README_OPENAI_UPLOAD.md  openai_upload.py
