[project]
name = "stock-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.0",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.0",
    "openai>=2.1.0",
    "pdfplumber>=0.11.7",
    "streamlit>=1.50.0",
    "youtube-transcript-api>=1.2.3",
    "fpdf2>=2.7.9",
    "deepagents>=0.2.6",
    "langchain-mcp-adapters>=0.1.13",
    "playwright>=1.56.0",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.14.2",
    "langchain-tavily>=0.2.13",
    "langchain-ollama>=1.0.0",
]
